# call-center-ai

./: .dockerignore  .editorconfig  .env.example  .funcignore  .gitignore  .pre-commit-config.yaml  .python-version  .sops.yaml  .syft.yaml  Dockerfile  Makefile  README.md  config-local-example.yaml  config-remote-example.yaml  function_app.py  host.json  local.example.settings.json  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  pipeline.yaml
DevTunnels/: devtunnels.json
app/: .funcignore  function_app.py  main.py  pyproject.toml  requirements.txt
app/docs/: demo.json
app/examples/: blocklist.csv
app/helpers/: __init__.py  cache.py  call_events.py  call_llm.py  call_utils.py  config.py  features.py  http.py  identity.py  llm_tools.py  llm_utils.py  llm_worker.py  logging.py  monitoring.py  resources.py  translation.py
app/helpers/config_models/: ai_search.py  ai_translation.py  app_configuration.py  cache.py  cognitive_service.py  communication_services.py  conversation.py  database.py  llm.py  monitoring.py  prompts.py  queue.py  root.py  sms.py
app/helpers/pydantic_types/: phone_numbers.py
app/models/: call.py  claim.py  error.py  message.py  next.py  readiness.py  reminder.py  synthesis.py  training.py
app/persistence/: ai_search.py  azure_queue_storage.py  communication_services.py  cosmos_db.py  icache.py  isearch.py  isms.py  istore.py  memory.py  redis.py  sqlite.py  twilio.py
app/public_website/templates/: base.html.jinja  call_me.html.jinja
app/resources/: lexicon.xml
app/tests/: cache.py  conftest.py  llm.py  search.py  store.py
bicep/: app.bicep  main.bicep
cicd/: Dockerfile
cicd/bicep/: app.bicep  main.bicep
configs/: key.txt  test.yaml
docs/: demo.json
examples/: blocklist.ipynb  import-training.ipynb
examples/dataset/: .gitignore
helpers/: __init__.py  call.py  call_events.py  call_llm.py  call_utils.py  config.py  features.py  http.py  identity.py  llm.py  llm_plugins.py  llm_tools.py  llm_utils.py  llm_worker.py  logging.py  monitoring.py  prompts.py  resources.py  translation.py  version.py
helpers/config_models/: ai_search.py  ai_translation.py  api.py  app_configuration.py  cache.py  cognitive_service.py  communication_service.py  communication_services.py  content_safety.py  conversation.py  database.py  eventgrid.py  llm.py  monitoring.py  openai.py  prompts.py  queue.py  resources.py  root.py  sms.py  twilio.py  voice.py  workflow.py
helpers/pydantic_types/: phone_numbers.py
infra/bicep/: app.bicep  main.bicep
models/: action.py  call.py  claim.py  llm_content.py  message.py  next.py  readiness.py  reminder.py  synthesis.py  training.py
persistence/: ai_search.py  azure_queue_storage.py  communication_services.py  console.py  cosmos.py  cosmos_db.py  icache.py  isearch.py  isms.py  istore.py  ivoice.py  memory.py  mock.py  redis.py  sqlite.py  twilio.py
public_website/: history.html.jinja  list.html.jinja  report.html  report.html.jinja  single.html.jinja
public_website/templates/: base.html.jinja
resources/: openapi.json
resources/tiktoken/: README.md
scripts/: gen_doc_stubs.py
sk_plugins/: call.py  claim.py  reminder.py  training.py  workflow.py
tests/: cache.py  conftest.py  conversations.yaml  llm.py  local.py  search.py  store.py
